--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing ="20">
     <tr>
-      <td><img src="Adar.png" alt="adar Profile picture"></td>
+      <td><img src="images/adar.png" alt="adar Profile picture"></td>
       <td><h1>Adar Rubin</h1>
       <p>
         <em>Mechanical Engineer at <strong><a href="https://www.qtflow.co/">Qtflow</a></strong></em></p>
